feat: complete frontend and start backend

--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
+    "@tanstack/react-query": "^5.62.8",
+    "axios": "^1.7.9",
     "imagekitio-react": "^4.2.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-quill-new": "^3.3.3",
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
