feat: combine frontend and backend

--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,4 @@ VITE_IMAGEKIT_BASEURL='https://ik.imagekit.io/mzyfizumf/'
 VITE_IMAGEKIT_PUBLIC_KEY='public_A+FcUjRkAmdLRcrcVEGDk/m5+KY='
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3VwcmVtZS10aXRtb3VzZS02NS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_Xh8nTAPENx2VG2F2FVm3wpUp5ecTh9wto4aRTx50AE
+VITE_API_URL=http://localhost:3000
