--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^11.0.0"
+    "react-toastify": "^11.0.0",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
