--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.31",
+    "@ngrok/ngrok": "^1.4.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "imagekit": "^6.0.0",
     "mongoose": "^8.9.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "svix": "^1.44.0"
   }
 }
